--- a/apps/client/.env
+++ b/apps/client/.env
@@ -1,6 +1,8 @@
+NEXT_PUBLIC_IPFS_ENDPOINT= "https://ipfs.infura.io:5001"
+NEXT_PUBLIC_IPFS_GATEWAY= "wired.infura-ipfs.ioo"
+
 ALCHEMY_ID=""
 NEXT_AUTH_SECRET=""
-
 NEXT_PUBLIC_IPFS_AUTH=""
-NEXT_PUBLIC_IPFS_ENDPOINT= "https://ipfs.infura.io:5001"
-NEXT_PUBLIC_IPFS_GATEWAY= "https://wired.ipfs.infura-ipfs.io"
+S3_ACCESS_KEY_ID=""
+S3_SECRET=""
