--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,19 +5,20 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "next build",
+    "codegen": "prisma generate",
+    "deploy": "prisma db push",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.159.0",
-    "@prisma/client": "^4.2.1",
+    "@prisma/client": "^4.3.0",
     "@rainbow-me/rainbowkit": "^0.4.6",
     "@trpc/client": "^9.27.0",
     "@trpc/next": "^9.27.0",
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
-    "@wired-xr/client-db": "*",
     "@wired-xr/engine": "*",
     "@wired-xr/ipfs": "*",
     "@wired-xr/lens": "*",
@@ -55,6 +56,7 @@
     "eslint-config-custom": "*",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
+    "prisma": "^4.3.0",
     "tailwindcss": "^3.1.8",
     "terser-webpack-plugin": "^5.3.4",
     "typescript": "^4.7.4",
