--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,7 @@
         "$ALCHEMY_ID",
         "$S3_ACCESS_KEY_ID",
         "$S3_SECRET",
+        "$DATABASE_URL",
         "$NODE_ENV",
         "$VERCEL_URL",
         "$HOST"
