--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -40,8 +40,7 @@
     "sharp": "^0.30.7",
     "urql": "^2.2.3",
     "wagmi": "^0.6.3",
-    "zod": "^3.18.0",
-    "zustand": "^4.0.0"
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -49,7 +48,6 @@
     "@babel/preset-react": "^7.18.6",
     "@types/babel__core": "^7.1.19",
     "@types/react": "^18.0.17",
-    "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^18.0.6",
     "@wired-xr/tsconfig": "*",
     "autoprefixer": "^10.4.8",
