--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
         "$NEXT_PUBLIC_IPFS_AUTH",
         "$NEXT_AUTH_SECRET",
         "$ALCHEMY_ID",
+        "$S3_ENDPOINT",
+        "$S3_REGION",
         "$S3_ACCESS_KEY_ID",
         "$S3_SECRET",
         "$DATABASE_URL",
