--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
         "$S3_REGION",
         "$S3_ACCESS_KEY_ID",
         "$S3_SECRET",
-        "$DATABASE_URL",
+        "$MYSQL_URL",
         "$NODE_ENV",
         "$VERCEL_URL"
       ],
