--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,6 @@
         "$S3_REGION",
         "$S3_ACCESS_KEY_ID",
         "$S3_SECRET",
-        "$MYSQL_URL",
         "$NODE_ENV",
         "$VERCEL_URL"
       ],
@@ -29,6 +28,9 @@
     },
     "codegen": {
       "dependsOn": ["^build"]
+    },
+    "client#codegen": {
+      "dependsOn": ["^build", "$DATABASE_URL"]
     },
     "test": {
       "dependsOn": ["build"]
