--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -42,7 +42,8 @@
     "sharp": "^0.30.7",
     "urql": "^2.2.3",
     "wagmi": "^0.6.3",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
